--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_estadisticoactivo.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_estadisticoactivo.jrxml
@@ -30,8 +30,8 @@
 				<text><![CDATA[ESTADISTICO DE PERSONAL ACTIVO]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="457" y="113" width="74" height="20" uuid="59da1542-7a90-4fae-83f4-0904ef379427"/>
-				<textElement textAlignment="Right">
+				<reportElement x="413" y="113" width="58" height="20" uuid="59da1542-7a90-4fae-83f4-0904ef379427"/>
+				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
@@ -44,7 +44,7 @@
 				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="531" y="113" width="26" height="20" uuid="37f23a9d-2cdd-4b50-a936-2a49aa4f198f"/>
+				<reportElement x="471" y="113" width="86" height="20" uuid="37f23a9d-2cdd-4b50-a936-2a49aa4f198f"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -58,7 +58,7 @@
 				<text><![CDATA[MINISTERIO DE JSUTICIA Y SEGURIDAD PUBLICA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="401" y="93" width="114" height="20" uuid="614c4f7e-48fd-4f17-affe-ea0863880960"/>
+				<reportElement x="413" y="93" width="102" height="20" uuid="614c4f7e-48fd-4f17-affe-ea0863880960"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -86,7 +86,7 @@
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="404" y="131" width="39" height="20" uuid="17dc8c6b-60be-4c6d-bce1-99d1de6b25a5"/>
+				<reportElement x="413" y="133" width="39" height="20" uuid="17dc8c6b-60be-4c6d-bce1-99d1de6b25a5"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -107,7 +107,7 @@
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="443" y="131" width="100" height="20" uuid="8d94ff66-e8b4-46e1-8b53-5e7d2eedb313"/>
+				<reportElement x="452" y="133" width="100" height="20" uuid="8d94ff66-e8b4-46e1-8b53-5e7d2eedb313"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -143,7 +143,7 @@
 	<columnHeader>
 		<band height="36">
 			<rectangle>
-				<reportElement x="0" y="0" width="552" height="28" backcolor="#FFFFFF" uuid="d467e0d9-7f90-48ce-8cf5-3fe678caad3f"/>
+				<reportElement x="225" y="0" width="327" height="28" backcolor="#FFFFFF" uuid="d467e0d9-7f90-48ce-8cf5-3fe678caad3f"/>
 			</rectangle>
 			<staticText>
 				<reportElement mode="Transparent" x="0" y="0" width="185" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="f95cdd72-8e1e-46f6-bbfb-c4693e831623"/>
